# Project1forOpenGLLearning

./: .gitignore  CMakeLists.txt  README.md
res/models/test1/: A house and a torus.mtl
res/shader/: shader.frag  shader.vert
res/shaders/: shader.frag  shader.vert  shader1.frag  shader1.vert  shader2.frag
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexAttrib.cpp  VertexAttrib.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  main.cpp
